Github Profile Finder

--- a/src/components/ProfileCard/ProfileCardRoot/ProfileCardRoot.module.css
+++ b/src/components/ProfileCard/ProfileCardRoot/ProfileCardRoot.module.css
@@ -6,3 +6,11 @@
     padding: 2rem 2rem 2rem 2.5rem;
     border-radius: 10px;
 }
+
+.name {
+    color: #E7EDF4;
+}
+
+.description {
+    color: #E7EDF4;
+}
